# SonarQubeDemo_WithSonarQube

./: .gitignore  Jenkinsfile  build.sh  sonar-project.properties
OpenCppCoverageDemo/: CMakeLists.txt  OpenCppCoverageDemo.sln
OpenCppCoverageDemo/CMakeModules/: CodeCoverage.cmake
OpenCppCoverageDemo/GoogleTest/: CMakeLists.txt  GoogleTest.cmake  GoogleTest.vcxproj  GoogleTest.vcxproj.filters
OpenCppCoverageDemo/TestDemo/: TestDemo.cpp  TestDemo.vcxproj  TestDemo.vcxproj.filters
OpenCppCoverageDemo/TestSource/: CMakeLists.txt  SourceCodeLibrary.cpp  TestSource.cmake  TestSource.cpp  TestSource.def  TestSource.h  TestSource.vcxproj  TestSource.vcxproj.filters  header.h
OpenCppCoverageDemo/UnitTestConsole/: CMakeLists.txt  InitHeader.h  TestSource.cpp  UnitTestConsole.cmake  UnitTestConsole.vcxproj  UnitTestConsole.vcxproj.filters  stdafx.cpp
OpenCppCoverageDemo/cmake/: build.sh
